Update java-garbage-collector.md